@startuml
class com.pluralsight.model.RegularTopping {
- RegularToppingType regularToppingType
+ String toString()
}


class com.pluralsight.model.Sandwich {
- Bread bread
- List<Topping> toppings
- SandwichSize sandwichSize
- boolean isToasted
+ void setBreadType(BreadType)
+ void setSandwichSize(SandwichSize)
+ void addTopping(Topping)
+ void removeTopping(Topping)
+ String getCheeses()
+ String getMeats()
+ String getRegularToppings()
+ String getName()
+ double getPrice()
+ SandwichSize getSandwichSize()
+ boolean isToasted()
+ void setToasted(boolean)
}


class com.pluralsight.model.Receipt {
- double paymentAmount
- double totalPrice
- List<Order> orders
- LocalDateTime localDateTime
+ void addOrder(Order)
+ void printToConsole()
+ void printToReceiptFile()
}


class com.pluralsight.model.Meat {
- MeatType meatType
+ String toString()
}


class com.pluralsight.model.Cheese {
- CheeseType cheeseType
+ String toString()
}


enum com.pluralsight.model.enums.RegularToppingType {
+  NONE
+  LETTUCE
+  PEPPERS
+  ONIONS
+  TOMATOES
+  JALEPENOS
+  CUCUMBERS
+  PICKLES
+  GUACAMOLE
+  MUSHROOMS
+  MAYO
+  MUSTARD
+  KETCHUP
+  RANCH
+  THOUSAND_ISLAND
+  VINAIGRETTE
+  AU_JUS
+  SAUCE
- String description
+ String getDescription()
+ {static} RegularToppingType fromChoice(int)
}


class com.pluralsight.model.Drink {
- DrinkSize size
- DrinkType type
+ String getName()
+ double getPrice()
+ String getSize()
+ String getType()
}


enum com.pluralsight.model.enums.ChipType {
+  NONE
+  DORITOS
+  LAYS
+  SUN_CHIPS
- String description
+ String getDescription()
+ {static} ChipType fromChoice(int)
}


enum com.pluralsight.model.enums.BreadType {
+  NONE
+  WHITE
+  WHEAT
+  RYE
+  WRAP
+  TORTILLA
- String description
+ String getDescription()
+ {static} BreadType fromChoice(int)
}


enum com.pluralsight.model.enums.DrinkType {
+  NONE
+  TEA
+  WATER
+  COLA
- String description
+ String getDescription()
+ {static} DrinkType fromChoice(int)
}


class com.pluralsight.model.Bread {
- BreadType breadType
- SandwichSize sandwichSize
+ void setBreadType(BreadType)
+ SandwichSize getSize()
+ void setSize(SandwichSize)
+ double getPrice()
+ String getDescription()
}


enum com.pluralsight.model.enums.DrinkSize {
+  NONE
+  SMALL
+  MEDIUM
+  LARGE
- String description
- double price
+ String getDescription()
+ double getPrice()
+ {static} DrinkSize fromChoice(int)
}


enum com.pluralsight.model.enums.CheeseType {
+  NONE
+  AMERICAN
+  PROVOLONE
+  CHEDDAR
+  SWISS
- String description
+ String getDescription()
+ {static} CheeseType fromChoice(int)
}


enum com.pluralsight.model.enums.MeatType {
+  NONE
+  STEAK
+  HAM
+  SALAMI
+  ROAST_BEEF
+  CHICKEN
+  BACON
- String description
+ String getDescription()
+ {static} MeatType fromChoice(int)
}


class com.pluralsight.model.Order {
- List<Product> products
+ void addProduct(Product)
+ double getPrice()
+ void removeProduct(Product)
+ List<Product> getProducts()
+ String toString()
}


interface com.pluralsight.model.Priceable {
~ double getPrice()
}

abstract class com.pluralsight.model.Product {
- int quantity
+ {abstract}String getName()
+ int getQuantity()
+ {abstract}double getPrice()
}


class com.pluralsight.model.Chip {
- {static} double CHIP_PRICE
- ChipType chipType
+ String getName()
+ double getPrice()
}


enum com.pluralsight.model.enums.SandwichSize {
+  NONE
+  SMALL
+  MEDIUM
+  LARGE
- String description
+ String getDescription()
+ {static} SandwichSize fromChoice(int)
}


abstract class com.pluralsight.model.Topping {
- SandwichSize sandwichSize
- ToppingType toppingType
- boolean hasExtra
+ double getPrice()
+ boolean withExtra()
+ ToppingType getToppingType()
}


enum com.pluralsight.model.ToppingType {
+  MEAT
+  CHEESE
+  REGULAR
- String description
- double basePrice
- double extraPrice
+ String getDescription()
}




com.pluralsight.model.Topping <|-- com.pluralsight.model.RegularTopping
com.pluralsight.model.Priceable <|.. com.pluralsight.model.Sandwich
com.pluralsight.model.Product <|-- com.pluralsight.model.Sandwich
com.pluralsight.model.Topping <|-- com.pluralsight.model.Meat
com.pluralsight.model.Topping <|-- com.pluralsight.model.Cheese
com.pluralsight.model.Product <|-- com.pluralsight.model.Drink
com.pluralsight.model.Priceable <|.. com.pluralsight.model.Bread
com.pluralsight.model.Priceable <|.. com.pluralsight.model.Order
com.pluralsight.model.Priceable <|.. com.pluralsight.model.Product
com.pluralsight.model.Product <|-- com.pluralsight.model.Chip
com.pluralsight.model.Priceable <|.. com.pluralsight.model.Topping
@enduml